# PRTS-App

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: publish.yaml
src/: App.tsx  Home.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/linux/: rplc
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  packet.rs  serial.rs  settings.rs
src/Icon/: BaseLineMinus.tsx  CrossFilled.tsx  InterfaceAlignBackBackDesignLayerLayersPileStack.tsx  ThemeStore.tsx
src/components/: Connection.tsx  Hero.tsx  Layout.tsx  Navbar.tsx  Terminal.tsx  ThemeListElement.tsx  ThemeSwitcher.tsx  ToolKit.tsx  UnitList.tsx  WindowButtons.tsx
src/pages/: Hero.tsx  PacketGeneration.tsx  RuntimeTerminal.tsx
src/stores/: useSettings.ts  useSettingsStore.ts
src/tauri/: settings.ts
src/types/: packet.ts
